--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     ]
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.8.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@iconify/icons-ant-design": "^1.1.0",
