--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,12 +3,12 @@
   "name": "React Material Minimal UI Kit",
   "icons": [
     {
-      "src": "favicon/logo.png",
+      "src": "favicon/favicons.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "favicon/logo.png",
+      "src": "favicon/favicons.png",
       "sizes": "512x512",
       "type": "image/png"
     }
