--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     ]
   },
   "dependencies": {
+    "@apollo/client": "^3.5.4",
     "@auth0/auth0-react": "^1.8.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
@@ -52,6 +53,7 @@
     "faker": "^5.5.3",
     "formik": "^2.2.9",
     "framer-motion": "^4.1.17",
+    "graphql": "^16.0.1",
     "history": "^5.0.1",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
@@ -60,8 +62,10 @@
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.1.2",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.0.0-beta.4",
     "react-scripts": "^4.0.1",
+    "react-toastify": "^8.1.0",
     "simplebar": "^5.3.5",
     "simplebar-react": "^2.3.5",
     "web-vitals": "^2.1.0",
