--- a/package.json
+++ b/package.json
@@ -81,5 +81,9 @@
     "eslint-plugin-react": "^7.25.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.4.1"
+  },
+  "engines": {
+    "node": "14.x",
+    "yarn": "1.x"
   }
 }
