pkg firebase | basic users Register

--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "@auth0/auth0-react": "^1.8.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@firebase/app": "^0.7.10",
+    "@firebase/auth": "^0.19.3",
     "@iconify/icons-ant-design": "^1.1.0",
     "@iconify/icons-eva": "^1.1.0",
     "@iconify/icons-ic": "^1.1.10",
