--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "framer-motion": "^4.1.17",
     "graphql": "^16.0.1",
     "history": "^5.0.1",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "prop-types": "^15.7.2",
